force-app/main/default/objects/Apttus__MergeEvent__c/Apttus__MergeEvent__c.object-meta.xml
<CustomObject>
    <description>Holds document merge events for subscribers to handle</description>
    <label>Merge Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>