force-app/main/default/objects/Apttus__MergeEvent__c/fields/Apttus__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Action__c</fullName>
    <description>The action which triggered the event</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preview</fullName>
            </value>
            <value>
                <fullName>Generate</fullName>
            </value>
            <value>
                <fullName>Generate Supporting Document</fullName>
            </value>
            <value>
                <fullName>Regenerate</fullName>
            </value>
            <value>
                <fullName>Check Out</fullName>
            </value>
            <value>
                <fullName>Revert Check Out</fullName>
            </value>
            <value>
                <fullName>Check In</fullName>
            </value>
            <value>
                <fullName>Create Offline Agreement</fullName>
            </value>
            <value>
                <fullName>Import Offline Agreement</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>