force-app/main/default/objects/Apttus__MergeEvent__c/fields/Apttus__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the agreement associated with the event</description>
    <inlineHelpText>ID of the agreement associated with the event</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Merge Events</relationshipLabel>
    <relationshipName>MergeEvents</relationshipName>
    <type>Lookup</type>
</CustomField>