force-app/main/default/objects/Apttus__MergeEvent__c/fields/Apttus__GroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__GroupId__c</fullName>
    <description>The event group reference</description>
    <externalId>true</externalId>
    <inlineHelpText>The event group reference</inlineHelpText>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>