force-app/main/default/objects/Apttus__MergeEvent__c/fields/Apttus__IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the merged document is private</description>
    <inlineHelpText>Indicates whether the merged document is private</inlineHelpText>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>