force-app/main/default/objects/Apttus__MergeEvent__c/fields/Apttus__ResultDocId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ResultDocId__c</fullName>
    <description>The ID of the result document</description>
    <label>Result Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>