force-app/main/default/objects/Apttus__MergeEvent__c/fields/Apttus__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Status__c</fullName>
    <description>The event handling status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>