force-app/main/default/objects/Apttus__MergeEvent__c/fields/Apttus__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the template associated with the event</description>
    <label>Template</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Merge Events</relationshipLabel>
    <relationshipName>MergeEvents</relationshipName>
    <type>Lookup</type>
</CustomField>